<resources>
    <string name="app_name">Meble</string>
    <string name="l_width">Szerokość</string>
    <string name="l_depth">Głębokość</string>
    <string name="l_height">Wysokość</string>
    <string name="l_symbol">Symbol</string>
    <string name="l_add">Dodaj</string>
    <string name="l_cancel">Anuluj</string>
    <string name="l_type">Typ</string>
    <string name="l_details">Szczegóły</string>
    <string name="l_name">Nazwa</string>
    <string name="l_length">Długość</string>
    <string name="l_save">Zapisz</string>
    <string name="l_copy">Kopiuj</string>
    <string name="l_remove">Usuń</string>
    <string name="l_edit">Edytuj</string>
    <string name="l_x_position">Pozycja X</string>
    <string name="l_y_position">Pozycja Y</string>
    <string name="l_diameter">Średnica</string>
    <string name="l_description">Opis</string>
    <string name="l_elements">Elementy</string>
    <string name="l_3d_model">Model</string>
    <string name="l_wardrobe_patterns">Wzory szaf</string>
    <string name="l_element_patterns">Wzory elementów</string>
    <string name="l_drilling_patterns">Wzory wierceń</string>

    <string name="l_width_pattern">Wzór na szerokość</string>
    <string name="l_length_pattern">Wzór na długość</string>
    <string name="l_position_x_pattern">Wzór na pozycję X wiercenia</string>
    <string name="l_position_y_pattern">Wzór na pozycję Y wiercenia</string>

    <string name="l_manage">Zarządzaj</string>
    <string name="l_drillings">Wiercenia</string>

    <string name="l_direction">Kierunek</string>
    <string name="l_offset">Przesunięcie</string>
    <string name="l_offset_percentage">Przesunięcie procentowo</string>

    <string name="l_add_drilling">Dodaj wiercenie</string>
    <string name="l_reference_point">Punkt odniesienia</string>
    <string name="l_element">element</string>

    <string-array name="a_direction">
        <item>Naprzód</item>
        <item>Wstecz</item>
    </string-array>

</resources>
