<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/contentElementDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            style="@style/Text.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l_name"
            android:textSize="@dimen/textSmall" />

        <TextView
            android:id="@+id/txtElementName"
            style="@style/Text.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textMedium" />

        <include layout="@layout/view_divider" />

        <TextView
            style="@style/Text.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l_length"
            android:textSize="@dimen/textSmall" />

        <TextView
            android:id="@+id/txtElementLength"
            style="@style/Text.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textMedium" />

        <include layout="@layout/view_divider" />

        <TextView
            style="@style/Text.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l_width"
            android:textSize="@dimen/textSmall" />

        <TextView
            android:id="@+id/txtElementWidth"
            style="@style/Text.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textMedium" />

        <include layout="@layout/view_divider" />

        <TextView
            style="@style/Text.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l_height"
            android:textSize="@dimen/textSmall" />

        <TextView
            android:id="@+id/txtElementHeight"
            style="@style/Text.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textMedium" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressElementDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnManageElement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_edit" />

</FrameLayout>